--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
     </div>
 
-    <script type="module" src="./script/script.js" defer></script>
-    <script src="./script/vinylAnimation.js" defer></script>
+    <script type="module" src="./scripts/script.js" defer></script>
+    <script src="./scripts/vinylAnimation.js" defer></script>
 </body>
 
 </html>
